# relaycore

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: CODEX_EXECUTION_GUIDE_NO_OBSIDIAN.md  ECHOMEMORY_CROSS_AGENT_BUILD_NO_OBSIDIAN.md  GITHUB_RELEASE_v0.1.0.md  GITHUB_RELEASE_v0.1.1.md  GITHUB_RELEASE_v0.1.2.md  GITHUB_RELEASE_v0.1.3.md  GITHUB_RELEASE_v1.0.md  GITHUB_RELEASE_v1.1.0.md  RELAYCORE_CROSS_AGENT_BUILD_NO_OBSIDIAN.md  RELEASE_READINESS.md  ROADMAP.md  claude-hooks.md
docs/decisions/: 2026-07-19-phase-11-commit-warning.md  2026-07-19-phase-11-handoff-summary.md  2026-07-19-phase-11-validation-checklist.md  2026-07-19-relaycore-full-rename.md
docs/phases/: phase-0-overview.md  phase-1-runtime-contract-and-adapters.md  phase-10-security-and-observability.md  phase-11-tests-and-validation.md  phase-2-schema-migrations.md  phase-3-storage-layer.md  phase-4-memory-quality.md  phase-5-command-bus-api.md  phase-6-event-log-and-sse.md  phase-7-mcp-tools.md  phase-8-html-mission-control.md  phase-9-collaboration-modes.md
echomemory/: __init__.py  cli.py  command_bus.py  event_log.py  mcp_server.py  memory_quality.py  migrations.py  models.py  runtime_adapters.py  server.py  storage.py  token_budget.py  web_ui.py
examples/codex/: config.toml.example
relaycore/: __init__.py  cli.py  command_bus.py  event_log.py  mcp_http.py  mcp_server.py  memory_quality.py  migrations.py  models.py  server.py  single_db.py  storage.py  token_budget.py  web_ui.py
scripts/: migrate_local_memories.py
tests/: test_cli.py  test_collaboration_modes.py  test_command_bus.py  test_event_log.py  test_mcp_tools.py  test_memory_migration.py  test_memory_quality.py  test_migrations.py  test_security.py  test_single_db.py  test_storage.py  test_web_ui.py
