[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaycore"
version = "0.1.3"
description = "A lightweight cross-agent memory and command relay for local AI runtimes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "RelayCore Maintainers" }
]
keywords = ["ai", "memory", "mcp", "codex", "claude", "sqlite", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Database",
]
dependencies = [
  "Werkzeug>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
mcp = [
  "mcp[cli]>=1.28,<2; python_version >= '3.10'",
]

[project.scripts]
relaycore = "relaycore.cli:main"

[tool.setuptools]
packages = ["relaycore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
