[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relaycore"
version = "1.0.0"
description = "A lightweight shared-memory and command relay control plane for local AI runtimes."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "RelayCore Maintainers" }
]
keywords = ["ai", "memory", "mcp", "codex", "claude", "sqlite", "agent"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Database",
]
dependencies = [
  "Werkzeug>=3.0,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]
mcp = [
  "mcp[cli]>=1.28,<2; python_version >= '3.10'",
]

[project.scripts]
relaycore = "relaycore.cli:main"

[tool.setuptools]
packages = ["relaycore"]

[tool.pytest.ini_options]
testpaths = ["tests"]
